compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_int_literals.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 5
expression: "\npub fn go(x: Int) -> Int {\n  case x {\n    0 -> 100\n    1 -> 200\n    _ -> 999\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> Int {
  case x {
    0 -> 100
    1 -> 200
    _ -> 999
  }
}


----- COMPILED GO
package thepackage

func Go(x int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    if _case_subject == int64(0) {
      return int64(100)
    }
    if _case_subject == int64(1) {
      return int64(200)
    }
    return int64(999)
  }())
}
