compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_literal_then_variable_catch_all.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 120
expression: "\npub fn go(x: Int) -> Int {\n  case x {\n    0 -> 100\n    n -> n * 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> Int {
  case x {
    0 -> 100
    n -> n * 2
  }
}


----- COMPILED GO
package thepackage

func Go(x int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    if _case_subject == int64(0) {
      return int64(100)
    }
    n := _case_subject
    _ = n
    return (n * int64(2))
  }())
}
