compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_multi_subject_evaluates_each_once.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 248
expression: "\npub fn go(x: Int, y: Int) -> Int {\n  case x + 1, y * 2 {\n    0, 0 -> 1\n    _, _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int, y: Int) -> Int {
  case x + 1, y * 2 {
    0, 0 -> 1
    _, _ -> 0
  }
}


----- COMPILED GO
package thepackage

func Go(x int64, y int64) int64 {
  return (func() int64 {
    _case_subject := (x + int64(1))
    _ = _case_subject
    _case_subject_1 := (y * int64(2))
    _ = _case_subject_1
    if _case_subject == int64(0) && _case_subject_1 == int64(0) {
      return int64(1)
    }
    return int64(0)
  }())
}
