compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_multi_subject_literals.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 190
expression: "\npub fn go(x: Int, y: Int) -> Int {\n  case x, y {\n    0, 0 -> 1\n    1, 2 -> 2\n    _, _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int, y: Int) -> Int {
  case x, y {
    0, 0 -> 1
    1, 2 -> 2
    _, _ -> 0
  }
}


----- COMPILED GO
package thepackage

func Go(x int64, y int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    _case_subject_1 := y
    _ = _case_subject_1
    if _case_subject == int64(0) && _case_subject_1 == int64(0) {
      return int64(1)
    }
    if _case_subject == int64(1) && _case_subject_1 == int64(2) {
      return int64(2)
    }
    return int64(0)
  }())
}
