compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_multi_subject_mixed_literal_and_discard.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 205
expression: "\npub fn go(x: Int, y: Int) -> Int {\n  case x, y {\n    0, _ -> 10\n    _, 0 -> 20\n    _, _ -> 30\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int, y: Int) -> Int {
  case x, y {
    0, _ -> 10
    _, 0 -> 20
    _, _ -> 30
  }
}


----- COMPILED GO
package thepackage

func Go(x int64, y int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    _case_subject_1 := y
    _ = _case_subject_1
    if _case_subject == int64(0) {
      return int64(10)
    }
    if _case_subject_1 == int64(0) {
      return int64(20)
    }
    return int64(30)
  }())
}
