compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_named_discard.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 176
expression: "\npub fn go(x: Int) -> Int {\n  case x {\n    _ignored -> 42\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> Int {
  case x {
    _ignored -> 42
  }
}


----- COMPILED GO
package thepackage

func Go(x int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    return int64(42)
  }())
}
