compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_returns_string.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 64
expression: "\npub fn go(x: Int) -> String {\n  case x {\n    1 -> \"one\"\n    _ -> \"other\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> String {
  case x {
    1 -> "one"
    _ -> "other"
  }
}


----- COMPILED GO
package thepackage

func Go(x int64) string {
  return (func() string {
    _case_subject := x
    _ = _case_subject
    if _case_subject == int64(1) {
      return "one"
    }
    return "other"
  }())
}
